Fix alignment and styling of tables of enumerations and other similar tables.

--- a/docs/src/css/libsbml-doxygen-stylesheet.css
+++ b/docs/src/css/libsbml-doxygen-stylesheet.css
@@ -374,7 +374,7 @@ table.memberdecls {
 }
 
 .memItemLeft, .memItemRight, .memTemplParams {
-    border-top: 1px solid #C4CFE5;
+    border-top: 1px solid #aaaaaa;
     font-weight: bold;
     color: #222;
     padding-bottom: 2px;
@@ -506,6 +506,11 @@ table.memname {
     -webkit-border-bottom-right-radius: 8px;
     -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
     background-image: -webkit-gradient(linear,center top,center bottom,from(#FFFFFF), color-stop(0.6,#FFFFFF), color-stop(0.60,#FFFFFF), color-stop(0.95,#F7F8FB), to(#efefef));
+}
+
+div.memdoc dl dd table tr td p
+{
+    vertical-align: top;
 }
 
 dl.reflist dt {
@@ -707,14 +712,6 @@ table.doxtable th {
 table.fieldtable {
     width: 100%;
     margin-bottom: 10px;
-    border: 1px solid #b5b5b5;
-    border-spacing: 0px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    -moz-box-shadow: rgba(0, 0, 0, 0.15) 2px 2px 2px;
-    -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);
 }
 
 .fieldtable td, .fieldtable th {
@@ -723,14 +720,21 @@ table.fieldtable {
 
 .fieldtable td.fieldtype, .fieldtable td.fieldname {
     white-space: nowrap;
-    border-right: 1px solid #b5b5b5;
-    border-bottom: 1px solid #b5b5b5;
     vertical-align: top;
+    font-family: "Courier New", Courier, monospace, fixed;
+    font-weight: bold;
+    font-size: 10pt;
+    padding-left: 2em;
 }
 
 .fieldtable td.fielddoc {
-    border-bottom: 1px solid #b5b5b5;
     width: 100%;
+    vertical-align: top;
+}
+
+.fieldtable td.fielddoc p {
+    margin-top: 0;
+    margin-bottom: 1em;
 }
 
 .fieldtable tr:last-child td {
@@ -738,21 +742,11 @@ table.fieldtable {
 }
 
 .fieldtable th {
-    background-image:url('nav_f.png');
-    background-repeat:repeat-x;
-    background-color: #E2E8F2;
-    font-size: 90%;
     color: #253555;
-    padding-bottom: 4px;
+    padding-bottom: 1em;
     padding-top: 5px;
+    padding-left: 0;
     text-align:left;
-    -moz-border-radius-topleft: 4px;
-    -moz-border-radius-topright: 4px;
-    -webkit-border-top-left-radius: 4px;
-    -webkit-border-top-right-radius: 4px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom: 1px solid #b5b5b5;
 }
 
 
